test/libsolidity/syntaxTests/nameAndTypeResolution/478_too_large_arrays_for_calldata_public.sol
contract C {
    function f(uint[85678901234] memory a) pure public {
    }
}
// ----
// TypeError 1534: (28-54): Type too large for memory.
